Se implemento el sistema de chat entre usuarios. Se implemento el sistema automatico de publicidad. Se implemento el sistema de unirce a un grupo. se actualizaron las URL para que sean automaticas. Ahora todas las imagenes, css, javascript se cargar y se traen del CDN.

--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,4 @@ RewriteBase /
 RewriteCond $1 !^(index\.php|images|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /frontend/index.php/$1 [L,QSA]
+RewriteRule ^(.*)$ /NuevaCarpeta/index.php/$1 [L,QSA]
